# pyneuralfx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev.py  pyproject.toml
docs/: Makefile  conf.py  configuration.md  dataset.md  evalvis.md  example.ipynb  make.bat  train.md
frame_work/: dataset.py  evaluation.py  main_full.py  main_snapshot.py  response_analysis.py  saver.py  solver.py  test_dev.py  utils.py  visualization.py
frame_work/configs/cnn/gcn/: concat_gcn.yml  film_gcn.yml  hyper_gcn.yml  snapshot_gcn.yml
frame_work/configs/cnn/tcn/: concat_tcn.yml  film_tcn.yml  hyper_tcn.yml  snapshot_tcn.yml
frame_work/configs/rnn/gru/: concat_gru.yml  dynamichyper_gru.yml  film_gru.yml  snapshot_gru.yml  statichyper_gru.yml
frame_work/configs/rnn/lstm/: concat_lstm.yml  dynamichyper_lstm.yml  film_lstm.yml  snapshot_lstm.yml  statichyper_lstm.yml
frame_work/configs/rnn/vanilla_rnn/: concat_vanilla_rnn.yml  film_vanilla_rnn.yml  snapshot_vanilla_rnn.yml  statichyper_vanilla_rnn.yml
frame_work/loss_analysis/: compare_loss.py
frame_work/pre_trained/statichyper_gru_32/: best_params.pt
frame_work/preprocess/: preproc_bossod3.py  preproc_snapshot.py  split_od3.py  utils.py
src/pyneuralfx/: __init__.py
src/pyneuralfx/eval_metrics/: eval_metrics.py  utils.py
src/pyneuralfx/loss_func/: loss_func.py  utils.py
src/pyneuralfx/models/: base.py  utils.py
src/pyneuralfx/models/cnn/: basic_block.py  blocks.py  gcn.py  tcn.py
src/pyneuralfx/models/filters/: analog_filters.py
src/pyneuralfx/models/rnn/: base.py  cells.py  constants.py  gru.py  lstm.py  rnn.py
src/pyneuralfx/transient_sep/: stn.py  tms_tools.py  utils.py
src/pyneuralfx/transient_sep/sms_tools/: __init__.py  dftModel.py  sineModel.py  stochasticModel.py  utilFunctions.py
src/pyneuralfx/vis/: plotting.py  sysplotting.py  utils.py
tests/: test_gcn_io.py  test_gru_io.py  test_lstm_io.py  test_pyneuralfx.py  test_rnn_io.py  test_tcn_io.py
tutorials/: 0_GettingStarted.ipynb
