[tool.poetry]
name = "pyneuralfx"
version = "0.1.0"
description = "A python package for neural audio effect"
authors = ["yytung"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.1.1+cu118", source = "pytorch"}
torchaudio = {version = "^2.1.1+cu118", source = "pytorch"}
numpy = "^1.26.2"
einops = "^0.7.0"
pyloudnorm = "^0.1.1"
soundfile = "^0.12.1"
matplotlib = "3.7.0"
librosa = "^0.10.1"
torch-dct = "^0.1.6"
calflops = "^0.2.9"
cython = "^3.0.10"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tqdm = "^4.66.1"
easydict = "^1.11"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"